--- a/petstore-mock-server.yaml
+++ b/petstore-mock-server.yaml
@@ -107,6 +107,11 @@ paths:
           description: The id of the pet to retrieve
           schema:
             type: string
+          examples:       # Multiple examples
+            one:         # Distinct name
+              value: 1    # Example value
+            two: # Distinct name
+              value: 2   # Example value
       responses:
         '200':
           description: Expected response to a valid request
@@ -114,6 +119,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
+              examples:
+                one:
+                  value:
+                    - id: 1
+                      name: name_1
+                      tag: tag_1
+                two:
+                  value:
+                    - id: 2
+                      name: name_2
+                      tag: tag_2
         '400':
           description: unexpected error
           content:
